--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   mask_text_input_formatter: ^1.2.1
   progress_dialog: ^1.2.4
   beamer: ^1.5.3
+  device_info_plus: ^4.1.2
 
   firebase_core: ^2.1.1
   firebase_messaging: ^14.0.3
